# spla-bench

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: clang-format.yml
dataset/: mycielskian7.mtx  properties.json
ide/: CLionHeader.h
scripts/: benchmark.py  build_graphblast.py  build_gunrock.py  build_lagraph.py  build_tool.py  config.py  dataset.py  driver.py  driver_graphblast.py  driver_gunrock.py  driver_lagraph.py  driver_spla.py  get_dataset.py  mtx.py  progress.py  shared.py
scripts/drivers/: driver.py  driver_graphblast.py  driver_gunrock.py  driver_lagraph.py  driver_spla.py
scripts/lib/: algorithm.py  benchmark_summary.py  dataset.py  matrix.py  progress.py  tool.py  util.py
sources/: Benchmark.hpp  BenchmarkEngine.cpp  BenchmarkEngine.hpp  BenchmarkParams.hpp  Main.cpp  Plugin.hpp
sources/data/: GraphData.hpp  GraphLoader.cpp  GraphLoader.hpp
sources/plugins/spla/: PluginSpla.cpp  PluginSpla.hpp
